<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Le Juste Nombre</string>
    <string name="action_settings">Settings</string>
    <string name="level_num">Level %s</string>
    <string name="play">Play</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="get_help">Get help</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="ask_for_friends">Ask help for friends</string>
    <string name="ad">Publicité</string>
    <string name="ad_switch_off">OFF</string>
    <string name="ad_switch_on">ON</string>
    <string name="ad_premium_fare">0.89€</string>


    <string-array name="menu_entries">
        <item>Recommend the app</item>
        <item>Rate the app</item>
        <item>Like us on Facebook</item>
        <item>Follow us on Twitter</item>
        <item>Contact Us</item>
    </string-array>

    <string name="its_more_than">It\'s more than %s</string>
    <string name="its_less_than">It\'s less than %s</string>
    <string name="leave_the_running_game">Do you want to leave the current game ?</string>

    <!-- Popups -->
    <string name="popup_remove_ad_title">Supprimer la publicité</string>
    <string name="popup_remove_ad_option_one">- Supprimer la publicité</string>
    <string name="popup_remove_ad_option_two">- 50 vies offertes</string>
    <string name="popup_outch_title">Outch, that one cost!</string>
    <string name="popup_outch_body">For every question, you get one free guess. After that you lose one life, per guess until five guesses.
        After five guesses, you can guess as much as you want for no penalty. Still can\'t find the answer ?
        You can always ask your friends for help with the button in the top right!</string>

    <string name="popup_joker_range_title">Joker</string>
    <string name="popup_joker_range_body" formatted="false">Entre %s et %s</string>
    <string name="popup_share_btn_text">Share</string>
    <string name="popup_facebook_page">Facebook page</string>
    <string name="popup_twitter_page">Twitter page</string>
    <string name="popup_continue_btn_text">Continue</string>
    <string name="popup_bingo_title">Level %s done!</string>
    <string name="popup_levels_done_title">All levels done!</string>
    <string name="popup_levels_done_body">But new levels are coming soon. Follow us on Facebook or Twitter in order to stay tuned!</string>
    <string name="popup_no_more_lives_title">No more lives!</string>
    <string name="popup_no_more_lives_body">Vous recevrez <b>%s vies</b> dans:</string>
    <string name="it_is_the_right_number">It\'s the right number!</string>
    <string name="in">in</string>

    <!-- Social -->
    <string name="facebook_page_url">https://www.facebook.com/therightnumber</string>
    <string name="twitter_page_url">https://twitter.com/LeJusteNombre</string>

    <!-- In app -->
    <string name="no_ad_packs">The 1500 and 5000 packs remove the ads</string>
    <string name="more_lives">The 1500 and 5000 packs remove the ads</string>
    <string name="free_inapp">FREE</string>
    <string name="inapp_25_below_text">Vidéo</string>
    <string name="inapp_200_below_text">+vendu</string>
    <string name="inapp_1500_below_text">-30%</string>
    <string name="inapp_5000_below_text">-60%</string>

</resources>
