<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:ads="http://schemas.android.com/apk/res-auto"
xmlns:switchpref="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/drawer_layout"
android:background="@drawable/background">


    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/actionBar"
                android:src="@color/blue03"/>

            <ImageButton
                android:id="@+id/menuImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="15dp"
                android:src="@drawable/menu"/>

            <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/menuImageButton"
                android:layout_marginTop="70dp"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:id="@+id/textView" />

            <Button
                style="@style/GreenPopupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/playBtn"
                android:text="@string/play"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:layout_centerInParent="true" />


            <Button
                style="@style/PopupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fbRecommendButton"
                android:text="F"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="30dp"
                android:layout_below="@+id/playBtn"/>

            <Button
                style="@style/PopupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/twitterRecommendButton"
                android:text="T"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/playBtn"/>

            <Button
                style="@style/PopupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mailRecommendButton"
                android:text="M"
                android:layout_marginTop="50dp"
                android:layout_marginRight="30dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/playBtn"/>

            <LinearLayout
                android:id="@+id/adPremiumLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/adView"
                android:gravity="center"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ad"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginRight="10dp"/>

                <org.jraf.android.backport.switchwidget.Switch
                    android:id="@+id/adSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    switchpref:switchTextOff="@string/ad_switch_off"
                    switchpref:switchTextOn="@string/ad_switch_on"/>


            </LinearLayout>


            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adUnitId="@string/admob_id"
                ads:adSize="BANNER"/>

        </RelativeLayout>
    </FrameLayout>

    <!-- The navigation drawer -->
    <RelativeLayout
        android:id="@+id/left_drawer"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:paddingTop="50dp"
        android:layout_gravity="start">

        <ListView android:id="@+id/menuListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:divider="#111"
            android:dividerHeight="2px"
            android:background="@drawable/shape_menu_background"/>


    </RelativeLayout>




</android.support.v4.widget.DrawerLayout>
