<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thegames.therightnumber.uigame.GameActivity.GameFragment"
    android:background="@drawable/background">

    <include
        android:id="@+id/actionBar"
        layout="@layout/action_bar" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionBar"
        android:src="@color/blue03"/>

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/actionBar"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/jokerRangeAnswerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/green01"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_above="@+id/history1TextView"
        android:textSize="14sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/history1TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_above="@+id/history2TextView"
        android:textSize="12sp"
        android:gravity="center"/>


    <TextView
        android:id="@+id/history2TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/white"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_above="@+id/answerRelativeLayout"
        android:textSize="14sp"
        android:gravity="center"/>


    <RelativeLayout
        android:id="@+id/answerRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_above="@+id/numericPad"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText
            android:id="@+id/answerFieldEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:inputType="number"
            android:paddingRight="45dp"
            android:textCursorDrawable="@null"
            style="@style/AnswerField"/>

        <ImageButton
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clear"
            android:background="@null"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>


    </RelativeLayout>

    <com.thegames.therightnumber.views.CustomNumericPad
        android:id="@+id/numericPad"
        android:layout_above="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adUnitId="@string/admob_id"
        ads:adSize="BANNER"/>

    <RelativeLayout
        android:id="@+id/helpFriendsRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="@color/black_translucent01"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/ask_for_friends"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_above="@+id/helpFromFacebookButton"/>

        <Button
            style="@style/PopupButton"
            android:id="@+id/helpFromFacebookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/helpFromTwitterButton"
            android:layout_marginBottom="20dp"
            android:text="@string/facebook"/>

        <Button
            style="@style/PopupButton"
            android:id="@+id/helpFromTwitterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cancelHelpButton"
            android:layout_marginBottom="20dp"
            android:text="@string/twitter"/>

        <Button
            style="@style/PopupButton"
            android:id="@+id/cancelHelpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/cancel"/>

    </RelativeLayout>

</RelativeLayout>
